New set of learning benchmarks using exploration